<resources>
    <string name="app_name">kakawe V2</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="iniciandoSesion">Log in . . .</string>

    <string name="nombre">Name</string>
    <string name="apellidos">Last name</string>
    <string name="fechaNacimiento">Birth date</string>
    <string name="telefono">Phone</string>
    <string name="Correo">Mail</string>
    <string name="contrasena">Password</string>
    <string name="continuar">Continue</string>
    <string name="iniciarSesion">Do you have an account? Log in</string>
    <string name="entrar">Enter</string>
    <string name="contrasenaOlvidada">Forgot the password?</string>
    <string name="nombreRequerido">Name required</string>
    <string name="correoNoValido">Invalid mail</string>
    <string name="contraseñaRequerida">Password required</string>
    <string name="contraseñaCorta">Short password, minimum 6 characters</string>
    <string name="miDomicilio">My address</string>
    <string name="credencialesInvalidas">Invalid credentials</string>

    <string name="correoreg">Write the email with which you registered</string>
    <string name="correoNuev">Send reset password mail</string>
    <string name="correoEnv">Email sent</string>
    <string name="correoEnvFallo">Error with email</string>



    <string name="ofrecen">Give</string>
    <string name="necesitan">Require</string>
    <string name="registrandoUsuario">Registering user</string>
    <string name="correoYaRegistrado">Registered mail</string>
    <string name="comprobandoDisponibilidad">Checking availability</string>

    <string name="tablon">Board</string>
    <string name="misAnuncios">My ads</string>
    <string name="historial">Historic</string>

    <string name="anadirComunidad">Add community</string>
    <string name="misComunidades">My communities</string>

    <string name="buscar">Search</string>
    <string name="crear">Create</string>
    <string name="nombreComunidad">Community name</string>
    <string name="localidad">Location</string>
    <string name="direccion">Address</string>
    <string name="introduceNomCom">Enter the name of the community to search</string>
    <string name="buscarPorDireccion">Search by address</string>
    <string name="noExisteComBuscar">Doesn´t exist the community </string>
    <string name="localidadRequerida">Location required</string>
    <string name="direccionRequerida">Address required</string>
    <string name="existeComunidad">Already exist one community whit that name</string>
    <string name="piso">Floor</string>
    <string name="puerta">Door</string>
    <string name="pisoRequerido">Add your floor</string>
    <string name="puertarequerida">Add your door</string>
    <string name="yaestasEnLaComunidad">You are already in the community </string>
    <string name="modificaNombreComunidad">Modify the name of the community if you wish,</string>
    <string name="modificaNombreComunidad2">it is generated by default with address and location.</string>

    <string name="miCuenta">My account</string>
    <string name="datosPersonales">Personal information</string>
    <string name="datosDelContacto">Contact information</string>
    <string name="sobreMi">About me</string>
    <string name="escribeSobreMi">Write something about you</string>

    <string name="queDeseasAnunciar">What do you want?</string>
    <string name="nuevoAnuncio">New ad</string>
    <string name="titulo">Title</string>
    <string name="foto">Photo</string>
    <string name="descripcion">Description</string>
    <string name="detalleAnuncio">Ad detail</string>
    <string name="categoria">Class</string>
    <string name="opcionesPublicacion">Publishing options</string>
    <string name="anuncioPermanente">permanent ad</string>
    <string name="fechaCaducidad">Expiration date</string>
    <string name="horaCaducidad">Expiration time</string>
    <string name="publicar">Post</string>
    <string name="actualizar">Update</string>
    <string name="defineTuDomicilio">Your address within the community</string>
    <string name="laComunidadYaExiste">The community already exists</string>


</resources>
