<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.example.admin.kakawev2.Anadir_Comunidad.CrearComunidadFragment">

    <TextView
        style="@style/tv_titulo_anuncio"
        android:layout_margin="10dp"
        android:text="@string/anadirComunidad"
        android:textColor="@color/gris_medio" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal">


        <ToggleButton
            android:id="@+id/bt_anadir_buscar"
            style="@style/segment_left"
            android:textOff="@string/buscar"
            android:textOn="@string/buscar" />

        <ToggleButton
            android:id="@+id/bt_anadir_crear"
            style="@style/segment_right"
            android:textOff="@string/crear"
            android:textOn="@string/crear" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_anadirCrear_localidad"
            style="@style/et_main"
            android:hint="@string/localidad"
            android:inputType="text" />


        <EditText
            android:id="@+id/et_anadirCrear_direccion"
            style="@style/et_main"
            android:hint="@string/direccion"
            android:inputType="textPostalAddress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/lato"
            android:text="@string/modificaNombreComunidad" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/lato"
            android:text="@string/modificaNombreComunidad2" />

        <EditText
            android:id="@+id/et_anadirCrear_nomcom"
            style="@style/et_main"
            android:hint="@string/nombreComunidad"
            android:inputType="text" />

        <Button
            android:id="@+id/bt_anadirCrear_continuar"
            style="@style/bt_main"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/rojo"
            android:text="@string/continuar" />

    </LinearLayout>
</LinearLayout>