<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.kakawe.admin.kakawev2.RegisterActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="45dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/logo_kakawe"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:src="@drawable/logotipo_kakawe" />

        <EditText
            android:id="@+id/et_registro_nombre"
            style="@style/et_main"
            android:hint="@string/nombre"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_registro_correo"
            style="@style/et_main"
            android:hint="@string/Correo"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_registro_contrasena"
            style="@style/et_main"
            android:hint="@string/contrasena"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/bt_registro_registrar"
            style="@style/bt_main"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/marron"
            android:text="@string/continuar" />

        <TextView
            android:id="@+id/tv_registro_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/iniciarSesion"
            android:textAlignment="center"
            android:textSize="15sp" />

    </LinearLayout>

</FrameLayout>