<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/bg_border_dialog"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_anuncio1_cerrar"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="10dp"
            android:src="@drawable/ic_cerrar" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="350dp"
        android:layout_height="550dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_anuncio1_titulo"
                style="@style/tv_titulo_anuncio"
                android:text="@string/queDeseasAnunciar" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_anadir_anuncio1_necesito"
                    android:layout_width="150dp"
                    android:layout_height="120dp"
                    android:src="@drawable/ic_necesito" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_black"
                    android:text="@string/necesitan"
                    android:textSize="22sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_anadir_anuncio1_ofrezco"
                    android:layout_width="150dp"
                    android:layout_height="120dp"
                    android:src="@drawable/ic_ofrezco" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_black"
                    android:text="@string/ofrecen"
                    android:textSize="22sp" />
            </LinearLayout>


        </LinearLayout>
    </FrameLayout>


</LinearLayout>